added background color to nav in css

--- a/src/web/Visitcard_Ilya.css
+++ b/src/web/Visitcard_Ilya.css
@@ -71,7 +71,9 @@ p a {
     color: #ffffff;
     font-style: italic;
 }
-
+nav {
+    background-color: #2d2c41;
+}
 nav a {
     color: #ffffff;
     display: inline-block;
